--- a/sass/mission.scss
+++ b/sass/mission.scss
@@ -104,11 +104,6 @@ div.mission-text {
 div.mission-text-slider {
     position: relative;
     height: 90px;
-    //overflow: hidden;
-
-    .title-3, p {
-        @extend .not-blurry;
-    }
 
     .active.tab-pane {
 
